# c-project

./: .gitignore  CMakeLists.txt  CMakeLists.txt:  Makefile  README .md  README.md  programul_tau
data/: clienti.json
src/: main.c
src/helpers/: cli_pages.c  files.c  json.c
